--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.6.5",
+    "react-toastify": "^8.1.0",
     "sass": "^1.44.0"
   },
   "devDependencies": {
